[package]
name = "ninjabook"
version = "0.1.0"
edition = "2021"
description = "A lightweight and high performance orderbook"
homepage = "https://github.com/ninja-quant/ninjabook"
documentation = "https://example.com/documentation"
repository = "https://github.com/ninja-quant/ninjabook"
license = "MIT"
categories = ["algorithms", "data-structures"]
keywords = ["orderbook", "trading", "crypto", "futures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
csv = "1.3.0"
serde = "1.0.197"

[[bench]]
name = "optimal_vs_naive"
harness = false

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
debug = true
lto = false
panic = "abort"
