[package]
name = "ninjabook"
version = "0.1.6"
edition = "2021"
summary = "A lightweight and high performance orderbook"
homepage = "https://github.com/ninja-quant/ninjabook"
repository = "https://github.com/ninja-quant/ninjabook"
license = "MIT"
categories = ["algorithms", "data-structures"]
keywords = ["orderbook", "trading", "crypto", "hft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ninjabook"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.20.0", features = ["abi3-py38"]}
